--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                       
                       <div class="features-info">
                          <h4>Web Development</h4>
-                         <p>I am a professional web developer with extremely good knowledge of Front-End and Back-End too and can work in stressful situation where normal people find hectic to work over</p>
+                         <p>I dot develop web application that is responsive</p>
                       </div>
                   </div>
               </div>
