--- a/index.html
+++ b/index.html
@@ -1453,7 +1453,7 @@
                            <h4>Journey in Robotics</h4>
                            <h5>12 May, 2020 / 5 Comments</h5>
                            <p>Our Journey started from +2 college that is Liverpool International College and we managed to participate in various national and international events as a team from Liverpool International College and from the name Robotics Club of Liverpool. </p>
-                            <a href="blog.html" class="btn btn-gray-border">Read More</a>
+                            <a href="#about" class="btn btn-gray-border">Read More</a>
                        </div>
                    </div>
                </div>
@@ -1468,7 +1468,7 @@
                            <h4>Making of this Website</h4>
                             <h5>12 May, 2021 / 3 Comments</h5>
                            <p>As i was extremely bored then I decided to make an website as an portfolio and ended up making in this shit !</p>
-                            <a href="blog.html" class="btn btn-gray-border">Read More</a>
+                            <a href="#about" class="btn btn-gray-border">Read More</a>
                        </div>
                    </div>
                </div>
@@ -1483,7 +1483,7 @@
                            <h4>RObotics Industry In Nepal</h4>
                              <h5>12 May, 2021 / 11 Comments</h5>
                            <p>Robotics Industry in Nepal is currently so fucked up by covid and various reason such as political instability.</p>
-                        <a href="blog.html" class="btn btn-gray-border">Read More</a>
+                        <a href="#about" class="btn btn-gray-border">Read More</a>
                        </div>
                    </div>
                </div>
