--- a/single-work.html
+++ b/single-work.html
@@ -1,15 +1,11 @@
 <!doctype html>
-<!--
-	Lamoda by TEMPLATE STOCK
-	templatestock.co @templatestock
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
--->
+
 
 
 <html lang="en-gb" class="no-js">
   <head>
     <meta charset="utf-8">
-	<title>Lamoda Free Responsive Template | Template Stock</title>
+	<title>Sulav Subedi</title>
     <meta name="author" content="">
     <meta name="keywords" content="">
     <meta name="description" content="">		
